crates/hid-accuforce-protocol/tests/snapshots/snapshot_tests__snapshot_hid_pid_usage_page.snap
---
source: crates/hid-accuforce-protocol/tests/snapshot_tests.rs
expression: HID_PID_USAGE_PAGE
---
15
