crates/hid-accuforce-protocol/tests/snapshots/snapshot_tests__snapshot_is_accuforce_pid_pro.snap
---
source: crates/hid-accuforce-protocol/tests/snapshot_tests.rs
expression: is_accuforce_pid(PID_ACCUFORCE_PRO)
---
true
