crates/hid-accuforce-protocol/tests/snapshots/snapshot_tests__snapshot_is_accuforce_pro_vid_pid.snap
---
source: crates/hid-accuforce-protocol/tests/snapshot_tests.rs
expression: "is_accuforce(VENDOR_ID, PID_ACCUFORCE_PRO)"
---
true
