crates/hid-accuforce-protocol/tests/snapshots/snapshot_tests__snapshot_is_accuforce_wrong_vid.snap
---
source: crates/hid-accuforce-protocol/tests/snapshot_tests.rs
expression: "is_accuforce(0x16D0, PID_ACCUFORCE_PRO)"
---
false
