crates/hid-accuforce-protocol/tests/snapshots/snapshot_tests__snapshot_max_report_bytes.snap
---
source: crates/hid-accuforce-protocol/tests/snapshot_tests.rs
expression: MAX_REPORT_BYTES
---
64
