crates/hid-accuforce-protocol/tests/snapshots/snapshot_tests__snapshot_model_from_pro_pid.snap
---
source: crates/hid-accuforce-protocol/tests/snapshot_tests.rs
expression: "AccuForceModel::from_product_id(PID_ACCUFORCE_PRO)"
---
Pro
