crates/hid-accuforce-protocol/tests/snapshots/snapshot_tests__snapshot_pid_accuforce_pro.snap
---
source: crates/hid-accuforce-protocol/tests/snapshot_tests.rs
expression: PID_ACCUFORCE_PRO
---
32844
