crates/hid-accuforce-protocol/tests/snapshots/snapshot_tests__snapshot_pro_display_name.snap
---
source: crates/hid-accuforce-protocol/tests/snapshot_tests.rs
expression: "AccuForceModel::Pro.display_name()"
---
"SimExperience AccuForce Pro"
