crates/hid-accuforce-protocol/tests/snapshots/snapshot_tests__snapshot_pro_max_torque_nm.snap
---
source: crates/hid-accuforce-protocol/tests/snapshot_tests.rs
expression: "AccuForceModel::Pro.max_torque_nm()"
---
7.0
